[package]
name = "gossipsub-chat-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
futures = "0.3.23"
libp2p = { version = "0.47.0", features = ["serde", "tcp-tokio"] }
libp2p-tcp = { version = "0.35.0", features = ["tokio"] }
log = "0.4.17"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["time"] }
